welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:11: error: type mismatch;
 found   : Unit
 required: String
	if ( ((day!=0) && (day!=6)) && (vacation)) {
        ^