welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	if ( ((day==0) || (day==6)) && !(vacation)) {
		return "7:00";
	}
	if ( (!(day==0) && !(day==6)) && !(vacation)) {
		return "10:00";
	}
	if ( ((day==0) || (day==6)) && (vacation)) {
		return "off";
	}
	if ( ((day!=0) && (day!=6)) && (vacation)) {
		return "10:00";
	}	
}
